Fixed ListSpaces bug. Removed social sharing capabilities temporarily. Updated some permission checks.

--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -132,7 +132,7 @@
 	    </footer>
 	   
 	    <div class="row" style="width:980px;margin:auto;">
-	        <div class="span12">
+	        <div class="span12" style="font-size:0.8em;">
                 {% block extrainfo %}
 	                (c) 2010-{% now "Y" %} <a href="http://code.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a>
 	            {% endblock %}
