--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -132,6 +132,11 @@ about if the user is autheticated or not didn't work
 <div class="indexblock three">
     <div class="row indexrow">
         <div class="span12">
+
+
+
+
+            {% comment %}
             <h4>{% trans "Share" %}</h4>
             <!-- Facebook -->
             <div id="fb-root"></div>
@@ -177,6 +182,8 @@ about if the user is autheticated or not didn't work
             <script type="text/javascript" src="http://widgets.tuenti.com/widgets.js"></script>
             <a href="http://www.tuenti.com/share" class="tuenti-share-button" icon-style="light" share-url="http://ecidadania.org"></a>
             <!-- End Tuenti -->
+
+            {% endcomment %}
         </div>
     </div>
 </div>
