Upated the code to make the call to wyiwyg

--- a/src/extras/custom_stuff/templates/wysihtml5_instance.html
+++ b/src/extras/custom_stuff/templates/wysihtml5_instance.html
@@ -1,7 +1,7 @@
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 			var config = {{ config }};
 			custom_templates.enable('{{ editor_name }}', '{{ field_id }}', config);
-</script>
+</script> -->
 <script>
 	var wysieditor = $('#{{field_id}}').wysihtml5();
 </script>
