--- a/src/e_cidadania/templates/base.html
+++ b/src/e_cidadania/templates/base.html
@@ -97,47 +97,22 @@
         {% block freewidth %}
         {% endblock %}
         
-        <footer>
-	        <div class="row" style="width:960px;margin:auto;">
-	               
-	        <div class="span3">
-	            {% block footerimg %}
-	                <img src="{{ STATIC_URL }}/assets/logos/logo.png" /><br />
-	            {% endblock %}
-	        </div>
-	                
-	        <div class="span3">
-	            <adress>
-	                <strong>{% trans "Pages" %}</strong><br />
-	                {% block footer %}
-                        {% for p in page %}
-                            <a href="/{{ p.uri }}" title="{{ p.name }}">{{ p.name }}</a><br /> |
-                        {% endfor %}
-	                {% endblock %}
-	            </adress>
-	        </div>
-	                
-	        <div class="span3">
-	            <strong>{% trans "Help" %}</strong><br />
-	            <a href="http://code.ecidadania.org/wiki/MailingLists">{% trans "Mailing lists" %}</a><br />
-	            <a href="http://code.ecidadania.org">{% trans "Issues" %}</a><br />
-	            <a href="mailto:support@ecidadania.org">{% trans "E-mail" %}</a><br />
-	            <a href="/invite/">{% trans "Invite your friends" %}</a>
-	        </div>
-	                
-	        <div class="span3">
-	            <strong>+info</strong><br />
-	        </div>
-	        </div>
-	    </footer>
-	   
-	    <div class="row" style="width:980px;margin:auto;">
-	        <div class="span12" style="font-size:0.8em;">
+	    <div class="row mainfooter">
+	        <div style="padding: 0px 10px 0px 10px;">
+	            (c) 2011-{% now "Y" %} <a href="http://ecidadania.org">e-cidadania</a> |
+                <a href="http://docs.ecidadania.org">Help</a> |
+                <a href="http://code.ecidadania.org">Developers</a> |
+                <a href="mailto:&#115;&#117;&#112;&#112;&#111;&#114;&#116;&#064;&#101;&#099;&#105;&#100;&#097;&#100;&#097;&#110;&#105;&#097;&#046;&#111;&#114;&#103;">Contact</a> |
+                Terms of use
+                <div style="float:right;margin-bottom:-5px;">
+                    <a href="http://twitter.com/ecidadaniafloss"><i style="font-size: 24px;" class="icon-twitter"></i> </a>
+                    <a href="https://www.facebook.com/pages/e-cidadania/220162834676928"><i style="font-size: 24px;margin-left:10px;" class="icon-facebook"></i> </a>
+                    <a href="https://plus.google.com/u/1/b/102485470041693312794/102485470041693312794"><i style="font-size: 24px;margin-left:10px;" class="icon-google-plus"></i> </a>
+                </div>
                 {% block extrainfo %}
-	                (c) 2010-{% now "Y" %} <a href="http://code.cidadania.coop">e-cidadania</a> {% trans "created by" %} <a href="http://www.cidadania.coop">Cidadania Sociedade Cooperativa</a>
-	            {% endblock %}
-	        </div>
-	    </div>
+                {% endblock %}
+            </div>
+        </div>
 		
 		<!-- Load JavaScript -->
         <script src="{{ STATIC_URL }}/js/bootstrap.min.js" type="text/javascript"></script>
