--- a/static/themes/EUROSHA/style.css
+++ b/static/themes/EUROSHA/style.css
@@ -18,10 +18,10 @@ ol, ul {
 
 /* Logo in Menu */
 .S3menulogo {
-    background: url(../../img/S3menu_logo.png) left top no-repeat;
+    background: url(img/ECHO_menulogo.png) left top no-repeat;
     text-shadow: none;
     padding: none;
-    width: 35px;
+    width: 48px;
     height: 28px;
     display: inline-block;
     position: absolute;
@@ -29,7 +29,7 @@ ol, ul {
     left: 2px;
 }
 .S3menuHome {
-    padding-left: 20px;
+    padding-left: 33px;
 }
 
 /*** Typography ***/
