EUROSHA homepage tweak

--- a/private/templates/EUROSHA/views/index.html
+++ b/private/templates/EUROSHA/views/index.html
@@ -41,11 +41,8 @@
  </p>
  <table class="tacenter">
   <tr>
-   <td rowspan=2>{{=T("This project is sponsored by")}}:</td>
+   <td rowspan=2>{{=T("This project is sponsored by the ")}} <a href="http://ec.europa.eu/echo/index_en.htm">European Commission Humanitarian Office / Humanitarian Aid & Civil Protection</a>:</td>
    <td><a href="http://ec.europa.eu/echo/index_en.htm"><img src="/{{=request.application}}/static/themes/EUROSHA/img/ECHO.png"></a></td>
-  </tr>
-  <tr>
-   <td><a href="http://ec.europa.eu/echo/index_en.htm">{{=T("European Commission Humanitarian Office / Humanitarian Aid & Civil Protection")}}</a></td>
   </tr>
  </table>
  <table class="tacenter">
@@ -62,19 +59,6 @@
    <td><a href="http://sahanafoundation.org"><img src="/{{=request.application}}/static/themes/EUROSHA/img/SSF.png"></a></td>
    <td><a href="http://www.scd.asso.fr"><img src="/{{=request.application}}/static/themes/EUROSHA/img/SCD.png"></a></td>
    <td><a href="http://www.sloga-platform.org"><img src="/{{=request.application}}/static/themes/EUROSHA/img/Sloga.png"></a></td>
-  </tr>
-  <tr>
-   <td><a href="http://acra.it">ACRA</a></td>
-   <td><a href="http://hrp.diakonie.cz/eng/">Diaconia ECCB</a></td>
-   <td><a href="http://www.focsiv.it">Focsiv</a></td>
-   <td><a href="http://www.france-volontaires.org">France Volontaires</a></td>
-   <td><a href="http://www.urd.org">Groupe URD</a></td>
-   <td><a href="http://hot.openstreetmap.org">Humanitarian OpenStreetMap Team</a></td>
-   <td><a href="http://openstreetmap.fr">OpenStreetMap France</a></td>
-   <td><a href="http://www.clovekvohrozeni.sk/en/">People in Peril</a></td>
-   <td><a href="http://sahanafoundation.org">Sahana Software Foundation</a></td>
-   <td><a href="http://www.scd.asso.fr">SCD</a></td>
-   <td><a href="http://www.sloga-platform.org">Sloga</a></td>
   </tr>
  </table>
 </div>
