* Fix Human Resource & Member PrePop * Call s3_approve_user when admin creates a new user * Remove truncate on inv dataTable * Project: Include org field for Lead Org in main form * Merged s3aaa confirmation_email with welcome_email * Only display 2 year numbers in date * Fix S3FilterFieldChange * s3rest.py Fix error on http://127.0.0.1:8000/eden/org/organisation/read?organisation.name=Kiribati+Red+Cross+Society: AttributeError: 'list' object has no attribute 'first' self.record = self.resource._rows.first() -> self.record = self.resource._rows[0] * Display AnyTime date widget BELOW input * User Profile accessible to all users * Add pr_person component to list of tables to be owned by a person's user

--- a/private/templates/IFRC/views/layout.html
+++ b/private/templates/IFRC/views/layout.html
@@ -81,7 +81,9 @@
      {{if response.menu_left:}}{{=response.menu_left}}{{pass}}
     </div>
     <div id='right-col'>
-   {{else:}}
+   {{elif response.homepage:}}
+    <div id='home-col'>
+   {{else:}} 
     <div id='single-col'>
    {{pass}}
      {{include "breadcrumbs.html"}}
