Cleanup merge, don't fail registration if initial email cannot be sent

--- a/private/templates/IFRC/views/layout.html
+++ b/private/templates/IFRC/views/layout.html
@@ -81,7 +81,7 @@
      {{if response.menu_left:}}{{=response.menu_left}}{{pass}}
     </div>
     <div id='right-col'>
-   {{elif response.homepage:}}
+   {{elif s3.homepage:}}
     <div id='home-col'>
    {{else:}} 
     <div id='single-col'>
